@@ -20,7 +20,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -53,16 +52,13 @@ class SeriesServiceTest {
         ReflectionTestUtils.setField(mockUser, "id", 1L);
     }
 
-    private Series createMockSeries(Long id, String title, String body, LocalDateTime deletedAt) {
+    private Series buildSeries(Long id, String title, String body) {
         Series series = Series.builder()
                 .user(mockUser)
                 .title(title)
                 .body(body)
                 .build();
         ReflectionTestUtils.setField(series, "id", id);
-        if (deletedAt != null) {
-            ReflectionTestUtils.setField(series, "deletedAt", deletedAt);
-        }
         return series;
     }
 
@@ -74,7 +70,7 @@ class SeriesServiceTest {
         @DisplayName("성공: 올바른 요청인 경우 시리즈를 정상 저장한다.")
         void create_Success() {
             // Given
-            Series series = createMockSeries(100L, "시리즈 제목", "시리즈 설명", null);
+            Series series = buildSeries(100L, "시리즈 제목", "시리즈 설명");
 
             when(userRepository.findById(1L)).thenReturn(Optional.of(mockUser));
             when(seriesRepository.save(any(Series.class))).thenReturn(series);
@@ -113,7 +109,7 @@ class SeriesServiceTest {
         @DisplayName("성공: creatorId가 null이면 삭제되지 않은 전체 시리즈를 조회한다.")
         void findAll_WithoutCreatorId() {
             // Given
-            List<Series> list = List.of(createMockSeries(1L, "제목1", "내용1", null));
+            List<Series> list = List.of(buildSeries(1L, "제목1", "내용1"));
             Page<Series> page = new PageImpl<>(list);
             when(seriesRepository.findAllByDeletedAtIsNull(any(Pageable.class))).thenReturn(page);
 
@@ -122,7 +118,7 @@ class SeriesServiceTest {
 
             // Then
             assertThat(result.getContent()).hasSize(1);
-            assertThat(result.getContent().get(0).getTitle()).isEqualTo("제목1");
+            assertThat(result.getContent().getFirst().getTitle()).isEqualTo("제목1");
             verify(seriesRepository, times(1)).findAllByDeletedAtIsNull(any(Pageable.class));
             verify(seriesRepository, never()).findByUserIdAndDeletedAtIsNull(anyLong(), any(Pageable.class));
         }
@@ -131,7 +127,7 @@ class SeriesServiceTest {
         @DisplayName("성공: creatorId가 제공되면 해당 유저가 작성한 삭제되지 않은 시리즈를 조회한다.")
         void findAll_WithCreatorId() {
             // Given
-            List<Series> list = List.of(createMockSeries(1L, "제목1", "내용1", null));
+            List<Series> list = List.of(buildSeries(1L, "제목1", "내용1"));
             Page<Series> page = new PageImpl<>(list);
             when(seriesRepository.findByUserIdAndDeletedAtIsNull(eq(1L), any(Pageable.class))).thenReturn(page);
 
@@ -153,7 +149,7 @@ class SeriesServiceTest {
         @DisplayName("성공: 삭제되지 않은 시리즈인 경우 데이터를 올바르게 반환한다.")
         void findById_Success() {
             // Given
-            Series series = createMockSeries(1L, "제목1", "내용1", null);
+            Series series = buildSeries(1L, "제목1", "내용1");
             when(seriesRepository.findByIdAndDeletedAtIsNull(1L)).thenReturn(Optional.of(series));
 
             // When
@@ -198,7 +194,7 @@ class SeriesServiceTest {
         @DisplayName("성공: 활성 상태의 시리즈인 경우 제목과 본문을 업데이트한다.")
         void update_Success() {
             // Given
-            Series series = createMockSeries(1L, "기존 제목", "기존 설명", null);
+            Series series = buildSeries(1L, "기존 제목", "기존 설명");
             when(seriesRepository.findByIdAndDeletedAtIsNull(1L)).thenReturn(Optional.of(series));
 
             // When
@@ -230,7 +226,7 @@ class SeriesServiceTest {
         @DisplayName("성공: 활성 상태의 시리즈인 경우 deletedAt 필드를 세팅해 삭제 처리한다.")
         void delete_Success() {
             // Given
-            Series series = createMockSeries(1L, "시리즈 제목", "시리즈 설명", null);
+            Series series = buildSeries(1L, "시리즈 제목", "시리즈 설명");
             when(seriesRepository.findByIdAndDeletedAtIsNull(1L)).thenReturn(Optional.of(series));
 
             // When
